TCP-Agg v-8.0: (1)Simplify the log output. (2)Be able to run multiple files and iterations at one time. (3)Fix some bugs declear on 'debug_1.8+.md' file.

--- a/src/innetwork-task/CMakeLists.txt
+++ b/src/innetwork-task/CMakeLists.txt
@@ -3,6 +3,7 @@ build_lib(
   SOURCE_FILES
     helper/parameter.cc
     helper/vectorop.cc
+    helper/utils.cc
     model/aggregator.cc
     model/consumer.cc
     model/InnetworkAggregationInterface.cc
@@ -10,6 +11,7 @@ build_lib(
     
   HEADER_FILES
     helper/parameter.h
+    helper/utils.h
     helper/vectorop.h
     model/aggregator.h
     model/consumer.h
