--- a/src/innetwork-task/config-file/config.ini
+++ b/src/innetwork-task/config-file/config.ini
@@ -1,13 +1,16 @@
 [Simulation]
-iterationNumbers = 10000
+iterationNumbers = 100
 ; Comma-separated list of buffer sizes (in bytes).
 bufferSizes = 16384, 20480
-lossRate = 0.000
+lossRate = 0.0001, 0.001
 ; Congestion control algorithm (e.g., TcpBbr, TcpNewReno, TcpCubic, etc.). To extent, see "src/internet/model/tcp-congestion-ops.h"
 congestionControl = ns3::TcpCubic
 ; Each vector is a uint64_t, there for each TCP packet size is vectorSize*8 bits.
 vectorSize = 150
 
 [Topology]
-topoTypes = dcn,isp
-topoScales = 10,50,100,200,500,1000
+; topoTypes = isp,dcn
+; topoScales = 10,50,100,200,500,1000
+topoTypes = isp
+topoScales = 50
+constrain = 5, 10
